--- a/PlanetWallet/Views/7_Setting/Popups/PopupCurrency.xib
+++ b/PlanetWallet/Views/7_Setting/Popups/PopupCurrency.xib
@@ -62,7 +62,7 @@
                         <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QN5-LY-3FR" customClass="PWButton" customModule="PlanetWallet" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="92" width="273" height="41"/>
                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
-                            <state key="normal" title="RMB">
+                            <state key="normal" title="CNY">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <userDefinedRuntimeAttributes>
